Add UI to forms

--- a/server/client/src/App.css
+++ b/server/client/src/App.css
@@ -1,3 +1,178 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 .App {
   text-align: center;
+}
+.flex {
+  display: flex;
+}
+.w-50 {
+  width: 50%;
+}
+.button {
+  padding: 10px 37px;
+  background: whitesmoke;
+  text-align: center;
+  text-decoration: none;
+  font-weight: bold;
+  font-size: 1.2rem;
+  border-radius: 5px;
+}
+.button a {
+  color: grey;
+  text-decoration: none;
+}
+.header {
+  display: flex;
+  width: 100%;
+  justify-content: space-evenly;
+  height: 90px;
+  align-items: center;
+  background-color: lightgray;
+}
+.home {
+  text-align: center;
+  margin-top: 15%;
+}
+.head-info {
+  margin: 30px;
+}
+form {
+  width: 33%;
+  margin-left: auto;
+  margin-right: auto;
+}
+.group {
+  position: relative;
+}
+input[type=text], input[type=password], input[type=email] {
+  font-size: 15px;
+  padding: 10px 10px 10px 5px;
+  display: block;
+  width: 95%;
+  border: none;
+  font-weight: bold;
+}
+input[type=button], input[type=submit] {
+  color: white;
+  width: 95%;
+  padding: 16px 20px;
+  background-color: rgb(245, 105, 105);
+  border-radius: 10px;
+  font-weight: bold;
+  font-size: 18px;
+  border: none;
+  cursor: pointer;
+}
+input:focus {
+  outline: none;
+}
+
+/* LABEL ======================================= */
+label {
+  color: #999;
+  font-size: 18px;
+  font-weight: normal;
+  position: absolute;
+  pointer-events: none;
+  left: 5px;
+  top: 10px;
+  transition: 0.2s ease all;
+  -moz-transition: 0.2s ease all;
+  -webkit-transition: 0.2s ease all;
+}
+
+/* active state */
+input:focus ~ label,
+input:valid ~ label {
+  top: -20px;
+  font-size: 14px;
+  color: gray;
+}
+.group-parent {
+  padding: 30px 10px 10px 10px;
+  border: 1px solid lightgray;
+  border-radius: 10px;
+  margin: 10px;
+}
+
+/* BOTTOM BARS ================================= */
+.bar {
+  position: relative;
+  display: block;
+  width: 100%;
+}
+.bar:before,
+.bar:after {
+  content: "";
+  height: 2px;
+  width: 0;
+  bottom: 1px;
+  position: absolute;
+  background: lightgray;
+  transition: 0.2s ease all;
+  -moz-transition: 0.2s ease all;
+  -webkit-transition: 0.2s ease all;
+}
+.bar:before {
+  left: 50%;
+}
+.bar:after {
+  right: 50%;
+}
+
+/* active state */
+input:focus ~ .bar:before,
+input:focus ~ .bar:after {
+  width: 50%;
+}
+
+/* HIGHLIGHTER ================================== */
+.highlight {
+  position: absolute;
+  height: 60%;
+  width: 100px;
+  top: 25%;
+  left: 0;
+  pointer-events: none;
+  opacity: 0.5;
+}
+
+/* active state */
+input:focus ~ .highlight {
+  -webkit-animation: inputHighlighter 0.3s ease;
+  -moz-animation: inputHighlighter 0.3s ease;
+  animation: inputHighlighter 0.3s ease;
+}
+
+/* ANIMATIONS ================ */
+@-webkit-keyframes inputHighlighter {
+  from {
+    background: lightgray;
+  }
+  to {
+    width: 0;
+    background: transparent;
+  }
+}
+@-moz-keyframes inputHighlighter {
+  from {
+    background: lightgray;
+  }
+  to {
+    width: 0;
+    background: transparent;
+  }
+}
+@keyframes inputHighlighter {
+  from {
+    background: lightgray;
+  }
+  to {
+    width: 0;
+    background: transparent;
+  }
 }
